# MyTools

./: .gitignore  CMakeLists.txt  NewProjectCMakeLists.md  README.md  mytools.cpp  mytools.h
include/MyTools/: fileparser.h  mytools.h
src/: fileparser.cpp  mytools.cpp
